# graphcast-interpretability-analysis

./: .gitignore  Dockerfile  Dockerfile.downloader  README.md  RESULTS.md  docker-compose.yml  graphcast_demo.ipynb  pyproject.toml
analyze/: __init__.py
analyze/activation_function/: gelu_vs_swish.ipynb
analyze/gnn_depth/: statistics_by_depth.ipynb
analyze/gnn_steps_rmse/: __init__.py  __main__.py  compute_input_baseline.py  compute_rmse.py  main.ipynb  plot_by_level.py
analyze/gnn_steps_rmse_aggregate/: aggregate_scores.py  gnn_steps_rmse_relative.csv  plot_relative_by_variable.py
analyze/input-data/: compare_cache_processed.py  compare_cache_processed_result.md  compare_shapes.py  data_structures.md  datetime_coordinate_issue_analysis.md  main.ipynb
analyze/models/: main.ipynb
analyze/test/: all.ipynb
analyze/vjp/: main.ipynb
docs/: decoder_compatibility_hutchinson.md  research_summary.md  usage.md  variable.md
graphcast/: deep_typed_graph_net.py  graphcast.py  rollout.py
graphcast_pipeline/: requirements.data_pipeline.txt  requirements_graphcast.txt
graphcast_pipeline/configs/: config.yaml
graphcast_pipeline/io/: era5_downloader.py
graphcast_pipeline/logs/: download_log_20250714_082740.json  download_log_20250714_100111.json
graphcast_pipeline/run/: __init__.py  run.py
graphcast_pipeline/scripts/: download_era5.py  shape_era5_to_graphcast.py
graphcast_pipeline/tests/: conftest.py  test_cdsAPI.py  test_era5_downloader.py  test_era5_downloader_live.py
graphcast_pipeline/transform/: dataset_utils.py  era5_to_graphcast.py
(+1 files in other folders)
